objects/DirectSellingRelationship__c.object
<CustomObject>
    <description>Ability to associate a &quot;Principal&quot; type Account to a &quot;Customer&quot; type Account to indicate a direct sales relationship</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>equals</operation>
                <value>Customer_Sold_To</value>
            </filterItems>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>equals</operation>
                <value>Customer_Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DirectSellingRelationships</relationshipLabel>
        <relationshipName>DirectSellingRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.TF_RecordTypeDeveloperName__c</field>
                <operation>equals</operation>
                <value>Principal_Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DirectSellingRelationships (Principal)</relationshipLabel>
        <relationshipName>DirectSellingRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEC_UniqueName__c</fullName>
        <label>TEC UniqueName</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DirectSellingRelationship</label>
    <nameField>
        <displayFormat>DSR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DirectSellingRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>